# operation-brainstorm

./: .gitignore  Cargo.toml  operation-brainstorm.code-workspace
operation-brainstorm/: build.zig  build.zig.zon
operation-brainstorm/src/: color_tensor.zig  dbg.zig  images.zig  instanced_cube.fs  instanced_cube.vs  main.zig
src/: app.rs  camera.rs  color.rs  color_pipeline.rs  constants.rs  core.rs  index.rs  main.rs  state.rs  voxel_color.rs  voxel_colors.rs
src/global/: state.rs
src/graphics/: camera.rs  color_pipeline.rs  mod.rs
src/lifecycle/: mod.rs  run.rs  shutdown.rs
src/model/: camera.rs  color_pipeline.rs  index.rs  mod.rs  state.rs  voxel_colors.rs
src/structures/: bitwise.rs  bitwise_builder.rs  bitwise_mut.rs  config.rs  config_enum.rs  mod.rs  voxel.rs  voxel_set.rs
src/structures/bitwise/: core_constructors.rs  core_impls.rs  core_macros.rs
src/structures/bitwise_builder/: core_constructors.rs  handler.rs
src/structures/bitwise_mut/: core_constructors.rs  core_impls.rs
src/structures/config/: core.rs  core_constructors.rs  core_functions.rs  core_macros.rs  core_tests.rs  serde_impls.rs
src/structures/voxel/: color.rs  core.rs  core_constructors.rs  core_functions.rs  core_impls.rs  filter.rs
voxel-color/: Cargo.toml  build.rs  cbindgen.toml
voxel-color/src/: lib.rs  voxel_color.rs  zig_alloc.rs
